templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app # Verbindung zum Pod
  template:
    metadata:
      labels:
        app: html-openshift-app 
    spec:
      containers:
      - name: html-openshift-app
        resources: {}
        ports:
        - containerPort: 8080
          protocol: TCP
        image: image-registry.openshift-image-registry.svc:5000/254201-zlic-nmarzo1/html-openshift-app
        imagePullPolicy: Always
